--- a/app/views/admin/dashboard.html.twig
+++ b/app/views/admin/dashboard.html.twig
@@ -1,4 +1,6 @@
 {% extends 'templates/adminLayout.html.twig' %}
+{% set page = 'list-post' %}
+
 {# {% block mainHeader %}
   <div class="container-fluid px-4">
     <div class="page-header-content">
@@ -85,7 +87,7 @@
                 </h1>
               </div>
               <div class="col-12 col-xl-auto mb-3">
-                <a class="btn btn-sm btn-light text-primary" href="blog-management-create-post.html">
+                <a class="btn btn-sm btn-light text-primary" href="http://localhost/mon-blog/blog-management-create-post">
                   <i class="me-1" data-feather="plus"></i>
                   Créer un Post
                 </a>
