--- a/app/views/admin/blog-management-edit-post.html.twig
+++ b/app/views/admin/blog-management-edit-post.html.twig
@@ -1,5 +1,141 @@
 {% extends 'templates/adminLayout.html.twig' %}
 {% set page = 'edit-post' %}
+{% block head %}
+<head>
+  <meta charset="utf-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+  <meta name="description" content=""/>
+  <meta name="author" content=""/>
+  <title>Mon Blog</title>
+  <link href="../public/css/adminStyles.css" rel="stylesheet"/>
+  <link rel="icon" type="image/x-icon" href="../public/assets/img/logo.png"/>
+  <script data-search-pseudo-elements="data-search-pseudo-elements" defer="defer" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/easymde@2.18.0/dist/easymde.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/easymde@2.18.0/dist/easymde.min.css" rel="stylesheet">
+</head>
+{% endblock %}
+{% block nav %}
+<nav class="topnav navbar navbar-expand shadow justify-content-between justify-content-sm-start navbar-light bg-white" id="sidenavAccordion">
+  <!-- Sidenav Toggle Button-->
+  <button class="btn btn-icon btn-transparent-dark order-1 order-lg-0 me-2 ms-lg-2 me-lg-0" id="sidebarToggle">
+    <i data-feather="menu"></i>
+  </button>
+  <!-- Navbar Brand-->
+  <!-- * * Tip * * You can use text or an image for your navbar brand.-->
+  <!-- * * * * * * When using an image, we recommend the SVG format.-->
+  <!-- * * * * * * Dimensions: Maximum height: 32px, maximum width: 240px-->
+  <a class="navbar-brand pe-3 ps-4 ps-lg-2" href="http://localhost/mon-blog/adminDashboard">Espace Admin</a>
+  <!-- Navbar Search Input-->
+  <!-- * * Note: * * Visible only on and above the lg breakpoint-->
+  <form class="form-inline me-auto d-none d-lg-block me-3">
+    <div class="input-group input-group-joined input-group-solid">
+      <input class="form-control pe-0" type="search" placeholder="Recherche" aria-label="Recherche"/>
+      <div class="input-group-text">
+        <i data-feather="search"></i>
+      </div>
+    </div>
+  </form>
+  <!-- Navbar Items-->
+  <ul class="navbar-nav align-items-center ms-auto">
+    <!-- Navbar Search Dropdown-->
+    <!-- * * Note: * * Visible only below the lg breakpoint-->
+    <li class="nav-item dropdown no-caret me-3 d-lg-none">
+      <a class="btn btn-icon btn-transparent-dark dropdown-toggle" id="searchDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <i data-feather="search"></i>
+      </a>
+      <!-- Dropdown - Search-->
+      <div class="dropdown-menu dropdown-menu-end p-3 shadow animated--fade-in-up" aria-labelledby="searchDropdown">
+        <form class="form-inline me-auto w-100">
+          <div class="input-group input-group-joined input-group-solid">
+            <input class="form-control pe-0" type="text" placeholder="Recherche" aria-label="Recherche" aria-describedby="basic-addon2"/>
+            <div class="input-group-text">
+              <i data-feather="search"></i>
+            </div>
+          </div>
+        </form>
+      </div>
+    </li>
+    <!-- Alerts Dropdown-->
+    <li class="nav-item dropdown no-caret d-none d-sm-block me-3 dropdown-notifications">
+      <a class="btn btn-icon btn-transparent-dark dropdown-toggle" id="navbarDropdownAlerts" href="javascript:void(0);" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <i data-feather="message-square"></i>
+      </a>
+      <div class="dropdown-menu dropdown-menu-end border-0 shadow animated--fade-in-up" aria-labelledby="navbarDropdownAlerts">
+        <h6 class="dropdown-header dropdown-notifications-header">
+          <i class="me-2" data-feather="message-square"></i>
+          Alerte commentaires
+        </h6>
+        <!-- Example Alert 1-->
+        <a class="dropdown-item dropdown-notifications-item" href="#!">
+          <div class="dropdown-notifications-item-icon bg-warning">
+            <i data-feather="message-square"></i>
+          </div>
+          <div class="dropdown-notifications-item-content">
+            <div class="dropdown-notifications-item-content-details">December 29, 2021</div>
+            <div class="dropdown-notifications-item-content-text">This is an alert message. It's nothing serious, but it requires your attention.</div>
+          </div>
+        </a>
+        <a class="dropdown-item dropdown-notifications-footer" href="#!">View All Alerts</a>
+      </div>
+    </li>
+    <!-- Messages Dropdown-->
+    <li class="nav-item dropdown no-caret d-none d-sm-block me-3 dropdown-notifications">
+      <a class="btn btn-icon btn-transparent-dark dropdown-toggle" id="navbarDropdownMessages" href="javascript:void(0);" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <i data-feather="mail"></i>
+      </a>
+      <div class="dropdown-menu dropdown-menu-end border-0 shadow animated--fade-in-up" aria-labelledby="navbarDropdownMessages">
+        <h6 class="dropdown-header dropdown-notifications-header">
+          <i class="me-2" data-feather="book"></i>
+          Contactes
+        </h6>
+        <!-- Example Message 1 -->
+        <a class="dropdown-item dropdown-notifications-item" href="#!">
+          <img class="dropdown-notifications-item-img" src="../public/assets/img/illustrations/profiles/profile-2.png"/>
+          <div class="dropdown-notifications-item-content">
+            <div class="dropdown-notifications-item-content-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+            <div class="dropdown-notifications-item-content-details">Thomas Wilcox · 58m</div>
+          </div>
+        </a>
+        <!-- Footer Link-->
+        <a class="dropdown-item dropdown-notifications-footer" href="#!">Read All Messages</a>
+      </div>
+    </li>
+    <!-- User Dropdown-->
+    <li class="nav-item dropdown no-caret dropdown-user me-3 me-lg-4">
+      <a class="btn btn-icon btn-transparent-dark dropdown-toggle" id="navbarDropdownUserImage" href="javascript:void(0);" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class="img-fluid" src="../public/assets/img/illustrations/profiles/profile-1.png"/></a>
+      <div class="dropdown-menu dropdown-menu-end border-0 shadow animated--fade-in-up" aria-labelledby="navbarDropdownUserImage">
+        {% if user is defined and user is not null %}
+          <h6 class="dropdown-header d-flex align-items-center">
+            <img class="dropdown-user-img" src="../public/assets/img/illustrations/profiles/profile-1.png"/>
+            <div class="dropdown-user-details">
+
+              <div class="dropdown-user-details-name">{{ user.userName }}</div>
+              <div class="dropdown-user-details-email">{{ user.email }}</div>
+              {# {% endif %} #}
+
+            </div>
+          </h6>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#!">
+            <div class="dropdown-item-icon">
+              <i data-feather="settings"></i>
+            </div>
+            Profile
+          </a>
+          <a class="dropdown-item" href="http://localhost/mon-blog/logout">
+            <div class="dropdown-item-icon">
+              <i data-feather="log-out"></i>
+            </div>
+            Déconexion
+          </a>
+        {% endif %}
+      </div>
+    </li>
+  </ul>
+</nav>
+{% endblock %}
 {% block mainHeader %}
   <div class="container-fluid px-4">
     <div class="page-header-content">
@@ -56,16 +192,27 @@
     <div class="col-lg-4">
       <div class="card card-header-actions">
         <div class="card-header">
-          Publish
+          Publier
           <i class="text-muted" data-feather="info" data-bs-toggle="tooltip" data-bs-placement="left" title="Your updates will be live once a moderator approves the changes."></i>
         </div>
         <div class="card-body">
           <div class="d-grid">
-            <button class="fw-500 btn btn-primary">Submit Updates</button>
+            <button class="fw-500 btn btn-primary">Valider la modification </button>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+{% block AdminJsLink %}
+    <script src="../public/js/boostrapBundleMinScripts.js"></script>
+    <script src="../public/js/adminJs/adminScripts.js"></script>
+    <script src="../public/js/adminJs/markdown.js"></script>
+    <script src="../public/js/adminJs/litepicker.js"></script>
+    <script src="../public/js/adminJs/datatables/datatables-simple-demo.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/litepicker/dist/bundle.js" crossorigin="anonymous"></script>
+{% endblock %}
 {% endblock %}
