--- a/app/views/admin/dashboard.html.twig
+++ b/app/views/admin/dashboard.html.twig
@@ -95,7 +95,7 @@
             </div>
           </div>
         </div>
-        <table id="datatablesSimple">
+        {# <table id="datatablesSimple">
           <thead>
             <tr>
               <th>Titre du Post</th>
@@ -115,15 +115,16 @@
             </tr>
           </tfoot>
           <tbody>
+          {% if post %}
             <tr>
-              <td>Boots on the Ground, Inclusive Thought Provoking Ideas</td>
-              <td>20 Jun 2021</td>
+              <td>{{ post.title }}</td>
+              <td>{{ post.createdAt }}</td>
               <td>
                 <div class="badge bg-gray-200 text-dark">Supprimé</div>
               </td>
-              <td>Valerie Luna</td>
+              <td>{{ user.userName }}</td>
               <td>
-                <a class="btn btn-datatable btn-icon btn-transparent-dark me-2" href="blog-management-edit-post.html">
+                <a class="btn btn-datatable btn-icon btn-transparent-dark me-2" href="http://localhost/mon-blog/blog-management-edit-post">
                   <i data-feather="edit"></i>
                 </a>
                 <a class="btn btn-datatable btn-icon btn-transparent-dark" href="#!">
@@ -131,104 +132,40 @@
                 </a>
               </td>
             </tr>
-            <tr>
-              <td>Invest In Social Impact</td>
-              <td>19 Jun 2021</td>
-              <td>
-                <div class="badge bg-yellow-soft text-yellow">En attente de validation</div>
-              </td>
-              <td>Aariz Fischer</td>
-              <td>
-                <a class="btn btn-datatable btn-icon btn-transparent-dark me-2" href="blog-management-edit-post.html">
-                  <i data-feather="edit"></i>
-                </a>
-                <a class="btn btn-datatable btn-icon btn-transparent-dark" href="#!">
-                  <i data-feather="trash-2"></i>
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>Save the World, Social Entrepreneur</td>
-              <td>18 Jun 2021</td>
-              <td>
-                <div class="badge bg-green-soft text-green">Publié</div>
-              </td>
-              <td>Alicia Allen</td>
-              <td>
-                <a class="btn btn-datatable btn-icon btn-transparent-dark me-2" href="blog-management-edit-post.html">
-                  <i data-feather="edit"></i>
-                </a>
-                <a class="btn btn-datatable btn-icon btn-transparent-dark" href="#!">
-                  <i data-feather="trash-2"></i>
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>Design Thinking Benefits Corporation Thought Leadership</td>
-              <td>17 Jun 2021</td>
-              <td>
-                <div class="badge bg-green-soft text-green">Publié</div>
-              </td>
-              <td>Mahesh Kumar</td>
-              <td>
-                <a class="btn btn-datatable btn-icon btn-transparent-dark me-2" href="blog-management-edit-post.html">
-                  <i data-feather="edit"></i>
-                </a>
-                <a class="btn btn-datatable btn-icon btn-transparent-dark" href="#!">
-                  <i data-feather="trash-2"></i>
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>Collaborative Consumption, Human-Centered Technology Thought Leader Systems</td>
-              <td>16 Jun 2021</td>
-              <td>
-                <div class="badge bg-green-soft text-green">Publié</div>
-              </td>
-              <td>William Cole</td>
-              <td>
-                <a class="btn btn-datatable btn-icon btn-transparent-dark me-2" href="blog-management-edit-post.html">
-                  <i data-feather="edit"></i>
-                </a>
-                <a class="btn btn-datatable btn-icon btn-transparent-dark" href="#!">
-                  <i data-feather="trash-2"></i>
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>Co-create, Empower - Moving the Needle on Investor Interests</td>
-              <td>14 Jun 2021</td>
-              <td>
-                <div class="badge bg-green-soft text-green">Publié</div>
-              </td>
-              <td>Valerie Luna</td>
-              <td>
-                <a class="btn btn-datatable btn-icon btn-transparent-dark me-2" href="blog-management-edit-post.html">
-                  <i data-feather="edit"></i>
-                </a>
-                <a class="btn btn-datatable btn-icon btn-transparent-dark" href="#!">
-                  <i data-feather="trash-2"></i>
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>Inclusive Shared Units of Analysis</td>
-              <td>13 Jun 2021</td>
-              <td>
-                <div class="badge bg-green-soft text-green">Publié</div>
-              </td>
-              <td>Amy Love</td>
-              <td>
-                <a class="btn btn-datatable btn-icon btn-transparent-dark me-2" href="blog-management-edit-post.html">
-                  <i data-feather="edit"></i>
-                </a>
-                <a class="btn btn-datatable btn-icon btn-transparent-dark" href="#!">
-                  <i data-feather="trash-2"></i>
-                </a>
-              </td>
-            </tr>
+          {% endif %}
+       
           </tbody>
-        </table>
+        </table> #}
+        <table class="table">
+    <the  <thead>
+    <tr>
+      <th>Titre du Post</th>
+      <th>Contenu</th>
+      <th>Date</th>
+      <th>Auteur</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for post in posts %}
+      <tr>
+        <td>{{ post.title }}</td>
+        <td>{{ post.content}}</td>
+        <td>{{ post.updatedAt}}</td>
+        <td>{{  user.userName }}</td>
+        <td>
+          <a class="btn btn-datatable btn-icon btn-transparent-dark me-2" href="http://localhost/mon-blog/blog-management-edit-post/{{ post.id }}">
+            <i data-feather="edit"></i>
+          </a>
+          <a class="btn btn-datatable btn-icon btn-transparent-dark" href="supprimer_post.php?id={{ post.id }}">
+            <i data-feather="trash-2"></i>
+          </a>
+        </td>
+      </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
       </div>
     </div>
   </div>
