--- a/app/views/blog/post.html.twig
+++ b/app/views/blog/post.html.twig
@@ -27,7 +27,7 @@
 
 {% block content %}
     <div class="container-fluid p-0">
-        <img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="Post image" />
+        <img class="card-img-top" src="http://localhost/mon-blog/public/assets/img/postImg/{{ post.imageUrl }}" alt="Post image" />
         <div class="container mt-5">
             {% if post %}
                 <div class="mb-4">
