--- a/app/views/blog/home.html.twig
+++ b/app/views/blog/home.html.twig
@@ -22,8 +22,8 @@
         {% set latestPost = posts | last %}
         <!-- A la une -->
         <div class="card mb-4 p-0">
-          <a href="http://localhost/mon-blog/post/{{ latestPost.id }}{{ latestPost.title }}">
-            <img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..."/>
+          <a href="http://localhost/mon-blog/post/{{ latestPost.id }}">
+            <img class="card-img-top" src="http://localhost/mon-blog/public/assets/img/postImg/{{ post.imageUrl }}" alt="post image"/>
           </a>
           <div class="card-body">
             <div class="small text-muted">Date de publication:
@@ -31,7 +31,7 @@
             <div class="small text-muted">Date de mise à jour:
               {{ latestPost.updatedAt }}</div>
             <h2 class="card-title h4">{{ latestPost.title }}</h2>
-            <p class="card-text">{{ latestPost.content }}</p>
+            <p class="card-text">{{ latestPost.postpreview }}</p>
             <p>Auteur :
               {{ latestPost.authorId }}</p>
             <p>id :
@@ -47,8 +47,8 @@
         {% for post in posts %}
           <div class="container-fluid p-0">
             <div class="card mb-4 p-0">
-              <a href="http://localhost/mon-blog/post/{{ post.id }}{{ post.title }}">
-                <img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..."/>
+              <a href="http://localhost/mon-blog/post/{{ post.id }}">
+                <img class="card-img-top" src="http://localhost/mon-blog/public/assets/img/postImg/{{ post.imageUrl }}" alt="post image"/>
               </a>
               <div class="card-body">
                 <div class="small text-muted">Date de publication:
@@ -56,7 +56,7 @@
                 <div class="small text-muted">Date de mise à jour:
                   {{ post.updatedAt }}</div>
                 <h2 class="card-title h4">{{ post.title }}</h2>
-                <p class="card-text">{{ post.content }}</p>
+                <p class="card-text">{{ post.postpreview }}</p>
                 <p>Auteur :
                   {{ post.authorId }}</p>
                 <p>id :
@@ -77,7 +77,7 @@
             <div class="card-header">Search</div>
             <div class="card-body">
               <div class="input-group">
-                <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search"/>
+                <input class="form-control" type="text" placeholder="Enter search termpost image" aria-label="Enter search termpost image" aria-describedby="button-search"/>
                 <button class="btn btn-primary" id="button-search" type="button">Go!</button>
               </div>
             </div>
