--- a/app/views/blog/posts.html.twig
+++ b/app/views/blog/posts.html.twig
@@ -30,7 +30,7 @@
             <div class="small text-muted">Date de mise à jour:
               {{ latestPost.updatedAt }}</div>
             <h2 class="card-title h4">{{ latestPost.title }}</h2>
-            <p class="card-text">{{ latestPost.content }}</p>
+            <p class="card-text">{{ latestPost.postpreview }}</p>
             <p>Auteur :
               {{ latestPost.authorId }}</p>
             <a class="btn btn-primary" href="http://localhost/mon-blog/post/{{ latestPost.id }}">Lire →</a>
@@ -91,7 +91,7 @@
               <div class="small text-muted">Date de mise à jour:
                 {{ post.updatedAt }}</div>
               <h2 class="card-title h4">{{ post.title }}</h2>
-              <p class="card-text">{{ post.content }}</p>
+              <p class="card-text">{{ post.postpreview }}</p>
               <p>Auteur :
                 {{ post.authorId }}</p>
               <a class="btn btn-primary" href="http://localhost/mon-blog/post/{{ post.id }}">Lire →</a>
@@ -106,7 +106,7 @@
       <hr class="my-0"/>
       <ul class="pagination justify-content-center my-4">
         <li class="page-item disabled">
-          <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a>
+          <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Plus Récent</a>
         </li>
         <li class="page-item active" aria-current="page">
           <a class="page-link" href="#!">1</a>
@@ -124,7 +124,7 @@
           <a class="page-link" href="#!">15</a>
         </li>
         <li class="page-item">
-          <a class="page-link" href="#!">Older</a>
+          <a class="page-link" href="#!">Plus Ancien</a>
         </li>
       </ul>
     </nav>
