--- a/app/views/admin/blog-management-edit-post.html.twig
+++ b/app/views/admin/blog-management-edit-post.html.twig
@@ -160,91 +160,84 @@
 {% block mainPageContent %}
 <!-- Main page content-->
 <div class="container-fluid px-4">
-  <form class="row gx-4" action="updatePost" method="POST" enctype="multipart/form-data">
-    <div class="col-lg-12 mb-4">
+  <form class="row gx-4 mt-2" method="POST" enctype="multipart/form-data">
       {% if post is empty %}
-        <p>Aucun post disponible.</p>
+          {% if success is defined %}
+            <div class="alert alert-success" role="alert">
+              {{ success }}
+            </div>
+          {% endif %}
       {% else %}
-        {% if post %}
-          <div class="card mb-4">
-            <div class="card-header">Titre du Post</div>
-            <div class="card-body"><input class="form-control" id="postTitleInput" type="text" name="title" required="required" value="{{ post.title }}">
-            </div>
+      {% if post %}
+      <div class="col-lg-8 mb-4">
+       
+          
+        <div class="card card-header-actions mb-4">
+          <div class="card-header">
+            Catégorie du Post
+            <i class="text-muted" data-feather="info" data-bs-toggle="tooltip" data-bs-placement="left" title="Veuillez choisir la catégorie corespondante dans la liste"></i>
           </div>
-          <div class="card card-header-actions mb-4">
-            <div class="card-header">
-              Aperçu du Post
-              <i class="text-muted" data-feather="info" data-bs-toggle="tooltip" data-bs-placement="left"></i>
-            </div>
-            <div class="card-body">
-              <textarea class="form-control" id="postpreview" name="postpreview" rows="3" required="required">{{ post.postpreview }}</textarea>
-            </div>
+          <div class="card-body">
+            <select class="form-select" name="category" required>
+            <option></option>
+              {% for category in categories %}
+              <option value="{{ category.id }}">{{ category.id }} - {{ category.name }} </option>
+              {% endfor %}
+            </select>
           </div>
-          <div class="card card-header-actions mb-4">
-            <div class="card-header">
-              Image Principal du Post
-              <i class="text-muted" data-feather="info" data-bs-toggle="tooltip" data-bs-placement="left" title="The post preview text shows below the post title, and is the post summary on blog pages."></i>
-            </div>
-            <div class="card-body">
-              <input type="file" name="postImage" class="form-control" id="inputGroupFile" accept=".jpg" title="Veuillez importer une image jpeg (* format .jpg)">
-              <label for="" class="file-label">
-                <small class="text-muted">Format requis : (* .jpg)</small>
-              </label>
-            </div>
+        </div>
+        <div class="card mb-4">
+          <div class="card-header">Titre du Post</div>
+          <div class="card-body"><input class="form-control" id="postTitleInput" type="text" name="title" required="required" value="{{ post.title }}"/></div>
+        </div>
+        <div class="card card-header-actions mb-4">
+          <div class="card-header">
+            Aperçu du Post
+            <i class="text-muted" data-feather="info" data-bs-toggle="tooltip" data-bs-placement="left" title="petit extrait du post"></i>
           </div>
-          <div class="card card-header-actions mb-4 mb-lg-0">
-            <div class="card-header">
-              Contenu du Post
-              <i class="text-muted" data-feather="info" data-bs-toggle="tooltip" data-bs-placement="left" title="Markdown is supported within the post content editor."></i>
-            </div>
-            <div class="card-body">
-              <textarea class="form-control" id="contenu" name="content" rows="20" required="required">{{ post.content }}</textarea>
-            </div>
+          <div class="card-body">
+           <textarea class="form-control" id="postpreview" name="postPreview" rows="3" required="required">{{ post.postpreview }}</textarea>
           </div>
-        {% endif %}
+        </div>
+        <div class="card card-header-actions mb-4">
+          <div class="card-header">
+            Image Principal du Post
+            <i class="text-muted" data-feather="info" data-bs-toggle="tooltip" data-bs-placement="left" title="L'image de couverture du Post en format JPEG"></i>
+          </div>
+          <div class="card-body">
+            <input type="file" name="postImage" class="form-control" id="inputGroupFile" required="required" placeholder="Format Jpg requis*" title="Veuillez importer une image jpeg (* format .jpg)" accept=".jpg" value="{{ post.imageUrl }}"></input>
+            <label for="postImage" class="file-label">
+              <small class="text-muted">Format requis : (* .jpg)</small>
+            </label>
+          </div>
+        </div>
+        <div class="card card-header-actions mb-4 mb-lg-0">
+          <div class="card-header">
+            Contenu du Post
+            <i class="text-muted" data-feather="info" data-bs-toggle="tooltip" data-bs-placement="left" title="Contenu du post (tous les paragraphes etc)"></i>
+          </div>
+          <div class="card-body">
+            <textarea class="form-control" id="contenu" name="content" rows="20" required="required">{{ post.content }}</textarea >
+          </div>
+        </div>
+        
+      </div>
       {% endif %}
-    </div>
-
-    {% if post %}
-    <div class="col-lg-8">
-      <div class="card mb-4">
-        <div class="card-header">Post Title</div>
-        <div class="card-body"><input class="form-control" id="postTitleInput" type="text" value="{{ post.title }}"/></div>
-      </div>
-      <div class="card card-header-actions mb-4">
-        <div class="card-header">
-          Post Preview
-          <i class="text-muted" data-feather="info" data-bs-toggle="tooltip" data-bs-placement="left" title="The post preview text shows below the post title, and is the post summary on blog pages."></i>
-        </div>
-        <div class="card-body">
-          <textarea class="lh-base form-control" type="text" rows="4">{{ post.postpreview }}</textarea>
-        </div>
-      </div>
-      <div class="card card-header-actions mb-4 mb-lg-0">
-        <div class="card-header">
-          Post Content
-          <i class="text-muted" data-feather="info" data-bs-toggle="tooltip" data-bs-placement="left" title="Markdown is supported within the post content editor."></i>
-        </div>
-        <div class="card-body">
-          <textarea id="postEditor" class="lh-base form-control editor-toolbar" type="text" rows="4">{{ post.content }}</textarea >
-        </div>
-      </div>
-    </div>
-    {% endif %}
-
-    <div class="container col-lg">
-      <div class="card card-header-actions">
-        <div class="card-header">
-          Publier
-          <i class="text-muted" data-feather="info" data-bs-toggle="tooltip" data-bs-placement="left" title="After submitting, your post will be published once it is approved by a moderator."></i>
-        </div>
-        <div class="card-body">
-          <div class="container d-grid col-lg-6">
-            <button type="submit" class="fw-500 btn btn-primary">Publier</button>
+      <div class="container col-lg">
+        <div class="card card-header-actions">
+          <div class="card-header">
+            Publier
+            <i class="text-muted" data-feather="info" data-bs-toggle="tooltip" data-bs-placement="left" title="Après publication votre poste serait visible sur le blog dans la page Atricle"></i>
+          </div>
+          <div class="card-body">
+            <div class="container d-grid col-lg-6">
+              <button type="submit" class="fw-500 btn btn-primary">Publier</button>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+      {% endif %}
+
   </form>
 </div>
 {% endblock %}
