deletion of a post

--- a/app/views/admin/dashboard.html.twig
+++ b/app/views/admin/dashboard.html.twig
@@ -125,7 +125,7 @@
                   <a class="btn btn-datatable btn-icon btn-transparent-dark me-2" href="http://localhost/mon-blog/blog-management-edit-post/{{ post.id }}">
                     <i data-feather="edit"></i>
                   </a>
-                  <a class="btn btn-datatable btn-icon btn-transparent-dark" href="http://localhost/mon-blog/blog-management-edit-post/">
+                  <a class="btn btn-datatable btn-icon btn-transparent-dark" href="http://localhost/mon-blog/blog-management-delete-post/{{ post.id }}">
                     <i data-feather="trash-2"></i>
                   </a>
                 </td>
