--- a/app/views/admin/blog-management-posts-admin.html.twig
+++ b/app/views/admin/blog-management-posts-admin.html.twig
@@ -1,4 +1,4 @@
-{% extends 'templates/adminLayout.html.twig' %}
+{# {% extends 'templates/adminLayout.html.twig' %}
 {% set page = 'liste-posts' %}
 {% block mainHeader %}
   <div class="container-fluid px-4">
@@ -165,4 +165,4 @@
     </div>
   </div>
 
-{% endblock %}
+{% endblock %} #}
