--- a/app/views/blog/post.html.twig
+++ b/app/views/blog/post.html.twig
@@ -74,7 +74,7 @@
                     </div>
                 {% endfor %}
             {% else %}
-                <p>No comments available.</p>
+                <p>0 commentaires pour ce post.</p>
             {% endif %}
         </div>
     </div>
