--- a/app/views/templates/adminLayout.html.twig
+++ b/app/views/templates/adminLayout.html.twig
@@ -7,7 +7,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
       <meta name="description" content=""/>
       <meta name="author" content=""/>
-      <title>Mon Blog</title>
+      <title>Adjoukou Dashboard</title>
       <link href="public/css/adminStyles.css" rel="stylesheet"/>
       <link rel="icon" type="image/x-icon" href="public/assets/img/logo.png"/>
       <script data-search-pseudo-elements="data-search-pseudo-elements" defer="defer" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js" crossorigin="anonymous"></script>
