update user creation sql

--- a/app/views/templates/layout.html.twig
+++ b/app/views/templates/layout.html.twig
@@ -75,8 +75,9 @@
             <h1 class="fw-bolder">{{ block('header_title') }}</h1>
             <p class="lead mb-0">{{ block('header_description') }}</p>
           </div>
-        </header>
-      {% endblock %}
+        </div>
+      </header>
+    {% endblock %}
 
       <!-- Content section -->
       {% block content %}{% endblock %}
