--- a/app/views/blog/contact.html.twig
+++ b/app/views/blog/contact.html.twig
@@ -1,192 +1,69 @@
-<!DOCTYPE html>
-<html lang="fr">
+{% extends 'templates/blogLayout.html.twig' %}
+
 {% set page = 'contact' %}
 
-  {% block head %}
-    <head>
-      <meta charset="utf-8"/>
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-      <meta name="description" content=""/>
-      <meta name="author" content=""/>
-      <title>Adjoukou AGBELOU Blog</title>
-      <!-- Favicon-->
-      <link rel="icon" type="image/x-icon" href="public/assets/favicon.ico"/>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.29.0/feather.min.js" crossorigin="anonymous"></script>
-      <!-- font awesome icon-->
-      <script data-search-pseudo-elements="data-search-pseudo-elements" defer="defer" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" crossorigin="anonymous"></script>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-      <!-- Core theme CSS (includes Bootstrap)-->
-      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-      <link href="public/css/booststrapStyles.css" rel="stylesheet"/>
-      <link href="public/css/myStyles.css" rel="stylesheet"/>
-      <link href="public/css/uiStyles.css" rel="stylesheet"/>
-    </head>
-  {% endblock %}
-  <body>
-    <div id="layoutDefault">
-      <div id="layoutDefault_content">
-        <main>
-          <!-- Navbar-->
-          <nav class="navbar navbar-marketing navbar-expand-lg bg-transparent navbar-dark fixed-top">
-            <div class="container px-5">
-              <a class="navbar-brand text-white" href="index.html">Adjoukou AGBELOU</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <i data-feather="menu"></i>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link {% if page == 'home' %}active{% endif %}" href="http://localhost/mon-blog/">Accueil</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link {% if page == 'posts' %}active{% endif %}" href="http://localhost/mon-blog/posts">Articles</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link {% if page == 'contact' %}active{% endif %}" href="http://localhost/mon-blog/contact">Contact</a>
-                  </li>
-                </ul>
-                {%if user is defined and user is not null %}
-                  <a class="btn fw-500 ms-lg-4 btn-teal" href="http://localhost/mon-blog/logout">
-                    Se déconnecter
-                    <i class="ms-2" data-feather="log-out"></i>
-                  </a>
-                  {% else %}
-
-                  <a class="btn fw-500 ms-lg-4 btn-white" href="http://localhost/mon-blog/login" {% if page == 'login' %}active{% endif %}>
-                    Se connecter
-                    <i class="ms-2" data-feather="log-in"></i>
-                  </a>
-                {% endif %}
-              </div>
-            </div>
-          </nav>
-          <!-- Page Header-->
-          <header class="page-header-ui page-header-ui-dark bg-gradient-primary-to-secondary">
-            <div class="page-header-ui-content pt-10">
-              <div class="container px-5 text-center">
-                <div class="row gx-5 justify-content-center">
-                  <div class="col-lg-8">
-                    <h1 class="page-header-ui-title mb-3">Contactez moi</h1>
-                    <p class="page-header-ui-text">Pour plus de détail sur mon parcours</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="svg-border-rounded text-light">
-              <!-- Rounded SVG Border-->
-              <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 144.54 17.34" preserveaspectratio="none" fill="currentColor">
-                <path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path>
-              </svg>
-            </div>
-          </header>
-          <section class="bg-light py-10">
-            <div class="container px-5">
-              <div class="row gx-5 justify-content-center">
-                <div class="col-lg-8 text-center">
-                  <h2>Je reste joignable sur ces canneaux</h2>
-                  <p class="lead mb-5">Pour toutes collaboration, n'hésitez pas à m'écrire ou m'appeler sur ma ligne directe</p>
-                </div>
-              </div>
-              <div class="row gx-5 align-items-center mb-10">
-                <div class="col-lg-4 text-center mb-5 mb-lg-0">
-                  <div class="section-preheading">Contact Linkedin</div>
-                  <a href="https://www.linkedin.com/in/mike-adjoukou-agbelou-23640098/">Adjoukou AGBELOU</a>
-                </div>
-                <div class="col-lg-4 text-center mb-5 mb-lg-0">
-                  <div class="section-preheading">Appel direct</div>
-                  <a href="tel:+33662272975">+33 662272975</a>
-                </div>
-                <div class="col-lg-4 text-center">
-                  <div class="section-preheading">Contact par mail</div>
-                  <a href="mailto:mike.agbelou@gmail.com">mike.agbelou@gmail.com</a>
-                </div>
-              </div>
-              <form>
-                <div class="row gx-5 mb-4">
-                  <div class="col-md-6">
-                    <label class="text-dark mb-2" for="inputName">Nom ou Raison Sociale</label>
-                    <input class="form-control py-4" id="inputName" type="text" placeholder="Nom"/>
-                  </div>
-                  <div class="col-md-6">
-                    <label class="text-dark mb-2" for="inputEmail">Adresse Email</label>
-                    <input class="form-control py-4" id="inputEmail" type="email" placeholder="email@example.com"/>
-                  </div>
-                </div>
-                <div class="mb-4">
-                  <label class="text-dark mb-2" for="inputMessage">Message</label>
-                  <textarea class="form-control py-3" id="inputMessage" type="text" placeholder="Saisissez votre message..." rows="4"></textarea>
-                </div>
-                <div class="text-center">
-                  <button class="btn btn-primary mt-4" type="submit">Envoyer</button>
-                </div>
-              </form>
-            </div>
-            <div class="svg-border-rounded text-dark">
-              <!-- Rounded SVG Border-->
-              <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 144.54 17.34" preserveaspectratio="none" fill="currentColor">
-                <path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path>
-              </svg>
-            </div>
-          </section>
-        </main>
-      </div>
-      <div id="layoutDefault_footer">
-        <footer class="footer pt-10 pb-5 mt-auto bg-dark footer-dark">
-          <div class="container px-5">
-            <div class="row gx-5">
-              <div class="col-lg-6 col-md-6">
-                <div class="footer-brand">Adjoukou AGBELOU</div>
-                <div class="mb-3">Développeur PHP/SYMFONY</div>
-                <div class="icon-list-social mb-5">
-                  <a class="icon-list-social-link" href="https://www.linkedin.com/in/mike-adjoukou-agbelou-23640098/" target="blank">
-                    <i class="fab fa-linkedin"></i>
-                  </a>
-                  <a class="icon-list-social-link" href="https://github.com/Mike031289">
-                    <i class="fab fa-github" target="blank"></i>
-                  </a>
-                  <a class="icon-list-social-link" href="https://dmdprod.com/developpeur_adjoukou-agbelou/" target="blank">
-                    <i class="fas fa-globe"></i>
-                  </a>
-                </div>
-              </div>
-              <div class="col-lg-6 col-md-6">
-                <div class="text-uppercase-expanded text-xs mb-4">Liens</div>
-                <ul class="list-unstyled mb-0">
-                  <li class="mb-2 nav-item">
-                    <a class="nav-link {% if page == 'home' %}active{% endif %}" href="http://localhost/mon-blog/">Accueil</a>
-                  </li>
-                  <li class="mb-2 nav-item">
-                    <a class="nav-link {% if page == 'posts' %}active{% endif %}" href="http://localhost/mon-blog/posts">Articles</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link {% if page == 'contact' %}active{% endif %}" href="http://localhost/mon-blog/contact">Contact</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <hr class="my-5"/>
-            <div class="row gx-5 align-items-center">
-              <div class="col-md-6 small">Copyright &copy; dmdprod 2023</div>
-              <div class="col-md-6 text-md-end small">
-                <a href="#!">Privacy Policy</a>
-                &middot;
-                <a href="#!">Terms &amp; Conditions</a>
-              </div>
-            </div>
+ {% block header %}
+  <header class="page-header-ui page-header-ui-dark bg-gradient-primary-to-secondary">
+    <div class="page-header-ui-content pt-10">
+      <div class="container px-5 text-center">
+        <div class="row gx-5 justify-content-center">
+          <div class="col-lg-8">
+            <h1 class="page-header-ui-title mb-3">Contactez moi</h1>
+            <p class="page-header-ui-text">Pour plus de détail sur mon parcours</p>
           </div>
-        </footer>
+        </div>
       </div>
     </div>
-   
-{% block JsLink %}
-  <!-- Bootstrap core JS-->
-  <!-- Core theme JS-->
-  <script src="public/js/boostrapBundleMinScripts.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="public/js/passwordShow.js"></script>
-  <script src="public/js/blogJs.js"></script>
+    <div class="svg-border-rounded text-light">
+      <!-- Rounded SVG Border-->
+      <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 144.54 17.34" preserveaspectratio="none" fill="currentColor">
+        <path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path>
+      </svg>
+    </div>
+  </header>
 {% endblock %}
 
-</body>
-</html>
+{% block section %}
+ <div class="container px-5">
+  <div class="row gx-5 justify-content-center">
+    <div class="col-lg-8 text-center">
+      <h2>Je reste joignable sur ces canneaux</h2>
+      <p class="lead mb-5">Pour toutes collaboration, n'hésitez pas à m'écrire ou m'appeler sur ma ligne directe</p>
+    </div>
+  </div>
+  <div class="row gx-5 align-items-center mb-10">
+    <div class="col-lg-4 text-center mb-5 mb-lg-0">
+      <div class="section-preheading">Contact Linkedin</div>
+      <a href="https://www.linkedin.com/in/mike-adjoukou-agbelou-23640098/">Adjoukou AGBELOU</a>
+    </div>
+    <div class="col-lg-4 text-center mb-5 mb-lg-0">
+      <div class="section-preheading">Appel direct</div>
+      <a href="tel:+33662272975">+33 662272975</a>
+    </div>
+    <div class="col-lg-4 text-center">
+      <div class="section-preheading">Contact par mail</div>
+      <a href="mailto:mike.agbelou@gmail.com">mike.agbelou@gmail.com</a>
+    </div>
+  </div>
+  <form novalidate="novalidate" method="POST">
+    <div class="row gx-5 mb-4">
+      <div class="col-md-6">
+        <label class="text-dark mb-2" for="inputName">Nom ou Raison Sociale</label>
+        <input class="form-control py-4" id="inputName" type="text" placeholder="Nom"/>
+      </div>
+      <div class="col-md-6">
+        <label class="text-dark mb-2" for="inputEmail">Adresse Email</label>
+        <input class="form-control py-4" id="inputEmail" type="email" placeholder="email@example.com"/>
+      </div>
+    </div>
+    <div class="mb-4">
+      <label class="text-dark mb-2" for="inputMessage">Message</label>
+      <textarea class="form-control py-3" id="inputMessage" type="text" placeholder="Saisissez votre message..." rows="4"></textarea>
+    </div>
+    <div class="text-center">
+      <button class="btn btn-primary mt-4" type="submit">Envoyer</button>
+    </div>
+  </form>
+</div>
+
+{% endblock %}
