--- a/app/views/user/register.html.twig
+++ b/app/views/user/register.html.twig
@@ -22,7 +22,7 @@
                   <h3 class="text-center font-weight-light my-4">Créer un compte</h3>
                 </div>
                 <div class="card-body">
-                  <form class="needs-validation" novalidate="novalidate" action="register" method="POST">
+                  <form class="needs-validation" novalidate="novalidate" method="POST">
                     {% if error is defined%}
                       <div class="alert alert-danger" role="alert">
                         {{ error }}
